Add composer package type

--- a/provision/templates/composer.json.j2
+++ b/provision/templates/composer.json.j2
@@ -8,6 +8,7 @@
 	"name": "{{ t3bs.base_package }}",
 	"description": "{{ t3bs.base_description }}",
 	"license": "{{ t3bs.base_license }}",
+  "type": "{{ t3bs.base_type }}",
 	"require": {
 		"typo3/cms": "{{ t3bs.typo3_version }}"
 	},
