Update composer.json template with latest typo3-console version and cms-package-dir setting

--- a/provision/templates/composer.json.j2
+++ b/provision/templates/composer.json.j2
@@ -10,7 +10,7 @@
 		}
 	],
   "require":{
-    "helhum/typo3-console": "^5.2"
+    "helhum/typo3-console": "^5.3"
   },
   "scripts":{
 		"typo3-cms-scripts": [
@@ -23,7 +23,8 @@
 	},
 	"extra": {
 		"typo3/cms": {
-			"web-dir": "web"
+			"web-dir": "web",
+      "cms-package-dir": "{$vendor-dir}/typo3/cms"
 		}
 	}
 }
