--- a/provision/templates/xdebug.ini.j2
+++ b/provision/templates/xdebug.ini.j2
@@ -1,9 +1,15 @@
 zend_extension=xdebug.so
 
-xdebug.remote_enable=1
-xdebug.remote_autostart=1
-xdebug.remote_host={{ t3bs.xdebug_remote_host }}
-xdebug.remote_port={{ t3bs.xdebug_remote_port }}
+xdebug.remote_enable={{ t3bs.xdebug.debugger.enable }}
+xdebug.remote_autostart={{ t3bs.xdebug.debugger.autostart }}
+xdebug.remote_host={{ t3bs.xdebug.debugger.remote_host }}
+xdebug.remote_port={{ t3bs.xdebug.debugger.remote_port }}
 xdebug.remote_connect_back=1
-xdebug.idekey={{ t3bs.xdebug_idekey }}
-xdebug.max_nesting_level={{ t3bs.xdebug_max_nesting_level }}
+xdebug.remote_cookie_expire_time=30
+xdebug.idekey={{ t3bs.xdebug.debugger.idekey }}
+xdebug.max_nesting_level={{ t3bs.xdebug.debugger.max_nesting_level }}
+
+xdebug.profiler_enable={{ t3bs.xdebug.profiler.enable }}
+xdebug.profiler_output_name={{ t3bs.xdebug.profiler.output_name }}
+xdebug.profiler_output_dir={{ t3bs.xdebug.profiler.output_dir }}
+xdebug.profiler_enable_trigger={{ t3bs.xdebug.profiler.enable_trigger }}
