--- a/provision/templates/launch.json.j2
+++ b/provision/templates/launch.json.j2
@@ -5,7 +5,7 @@
 			"name": "Listen for XDebug",
 			"type": "php",
 			"request": "launch",
-			"port": {{ t3bs.xdebug_remote_port }},
+			"port": {{ t3bs.xdebug.debugger.remote_port }},
 			"pathMappings": {
 				"{{ t3bs.document_root }}/{{ t3bs.project_folder }}/": "${workspaceFolder}/site/{{ t3bs.project_folder }}/"
 			}
