--- a/provision/templates/gitignore.j2
+++ b/provision/templates/gitignore.j2
@@ -1,13 +1,55 @@
-#############################
-# TYPO3 CMS Base Distribution
-#############################
+########################
+# TYPO3 CMS
+# global ignore file
+########################
+#
+# Don't ignore .rej and .orig as we want to see/clean files after conflict resolution.
+#
+# For local exclude patterns please edit .git/info/exclude.
+#
+########################
+
+#
+# Ignore temporary files (left by editors and OS)
+*~
+*.bak
+*.swp
 .DS_Store
-.idea
-bin
-index.php
+
+#
+# Ignore by common IDEs used directories/files
 nbproject
-vendor
-typo3
-typo3_src
-web/index.php
-web/typo3
+*.idea
+*.project
+.buildpath
+.settings
+.TemporaryItems
+.webprj
+
+#
+# Temporary files and folders
+.cache
+.php_cs.cache
+.sass-cache
+.session
+*.log
+/var
+/web/typo3temp
+
+#
+# Ignore build stuff
+.ddev/*
+bower_components/*
+node_modules/*
+
+#
+# TypeScript stuff
+.baseDir.ts
+.tscache
+
+#
+# Ignore composer stuff
+/bin/*
+/vendor
+/web/index.php
+/web/typo3
